<resources>
    <string name="delete">删除</string>
    <string name="hot_recommnd">推荐网址</string>
    <string name="net_load">点击屏幕，重新加载</string>
    <string name="pre_loading">释放即可刷新</string>
    <string name="app_name">ChinaBrowser</string>
    <string name="app_txt">欢迎</string>
    <string name="select_tip">请选择您的语言</string>
    <string name="select_tip2">Dilinizi seçin</string>
    <string name="select_china">中文</string>
    <string name="select_turkish">Türkçe</string>
    <string name="setting_login">点击登录</string>
    <string name="setting_switch">语言切换</string>
    <string name="setting_collection">收藏夹</string>
    <string name="setting_history">历史</string>
    <string name="setting_search">默认搜索引擎</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_clear">清空缓存</string>
    <string name="setting_clear_success">清除缓存成功</string>
    <string name="setting_loginout">退出登录</string>
    <string name="setting_loginsuccess">登录成功</string>
    <string name="setting_loginfail">登录失败</string>
    <string name="setting_login_que">是否退出登录</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_cancel">取消收藏成功</string>
    <string name="search_title">请输入网址或关键字</string>
    <string name="web_search">搜索</string>
    <string name="add_recommand">已添加</string>
    <string name="delete_recommand">已移除</string>
    <string name="web_into">跳转</string>
    <string name="share_cancel">取消</string>
    <string name="setting_login_yes">是</string>
    <string name="clearup">清理完成</string>
    <string name="setting_login_no">否</string>
    <string name="setting_clear_account">用户注销</string>
    <string name="str_user_email2phonenum">邮箱</string>
    <string name="str_user_name">请输入您的邮箱</string>
    <string name="str_user_password">请输入您的密码</string>
    <string name="str_remenber_password">记住密码</string>
    <string name="str_login">登录</string>
    <string name="str_free_register">免费注册</string>
    <string name="str_forget_password">忘记密码</string>
    <string name="str_userlogin_other">使用第三方账号登录</string>
    <string name="str_userlogin_cando">登录中华浏览器账号，可以同步以下数据</string>
    <string name="str_userlogin_fav">书签</string>
    <string name="str_userlogin_tab">标签页(窗口)</string>
    <string name="str_userlogin_more">更多服务</string>
    <string name="searech_input">输入关键字</string>
    <string name="searech_recommend">推荐网址</string>
    <string name="attentive">默认搜索引擎</string>
    <string name="search1">百度</string>
    <string name="search2">搜狗</string>
    <string name="search3">360</string>
    <string name="setting_title">设置</string>
    <string name="labs">页签</string>
    <string name="add_labs">新建页签</string>
    <string name="homepage">主页</string>
    <string name="hotnews">新闻列表</string>
    <string name="more_text">更多</string>
    <string name="radio_text">电台</string>
    <string name="add">添加</string>
    <string name="open">打开</string>
    <string name="travel">旅游</string>
    <string name="zhonghuawnag">中华网</string>
    <string name="str_login_noname">用户名不能为空</string>
    <string name="str_login_nopsw">密码不能为空</string>
    <string name="str_login_noconpsw">确认密码不能为空</string>
    <string name="str_login_noeque">两次输入密码不相同</string>
    <string name="str_login_notmail">邮箱格式有误，请重新输入</string>
    <string name="str_regist_one">注册即表示同意中华浏览器《用户服务协议》条款</string>
    <string name="str_regist_two">《用户服务协议》</string>
    <string name="str_regist_three">条款</string>
    <string name="str_regist_success">注册成功</string>
    <string name="str_regist_fail">注册失败</string>
    <string name="str_nickname">昵称</string>
    <string name="str_passowrd">6~16位数字或字母</string>
    <string name="str_register">立即注册</string>
    <string name="str_pswcon">确认密码</string>
    <string name="title_register">注册</string>
    <string name="str_agree">同意</string>
    <string name="str_agreement">中华浏览器用户服务协议</string>
    <string name="str_haveaccount">已有账号！</string>
    <string name="str_comeback">返回登录</string>
    <string name="str_bottomlinr">没有更多内容啦</string>
    <string name="str_nowifi">没有连接wifi</string>
    <string name="str_use4g">是否使用流量播放视频</string>
    <string name="history_today">今天</string>
    <string name="history_lastweek">上周</string>
    <string name="history_lastmonth">一个月前</string>
    <string name="nohistory">暂无历史记录</string>
    <string name="nocollection">暂无收藏</string>
    <string name="find_psw">找回密码</string>
    <string name="send_mails">邮件已发送</string>
    <string name="language_zh">简体中文</string>
    <string name="language_tr">土耳其文</string>
    <string name="added">此网址已经添加了</string>
    <!-- 首页情景翻译模块 -->
    <string name="translate_language_set_from">源语言</string>
    <string name="translate_language_set_to">目标语言</string>
    <string name="translate_language_zh">简体中文 (Simplified Chinese)</string>
    <string name="translate_language_en">English (English)</string>
    <string name="translate_language_tr">Türkçe (Turkish)</string>
    <string name="translate_list_title">翻译详情</string>
    <string name="restartapp">重启APP后生效,是否切换？</string>


    <!-- 一级分类 -->
    <string name="translate_title">翻译</string>
    <string name="translate_parent_airport">机场</string>
    <string name="translate_parent_traffic">交通</string>
    <string name="translate_parent_hotel">宾馆</string>
    <string name="translate_parent_restaurant">餐厅</string>
    <string name="translate_parent_attraction">景点</string>
    <string name="translate_parent_entertainment">娱乐</string>
    <string name="translate_parent_shopping">商场</string>
    <string name="translate_parent_bank">银行</string>
    <string name="translate_parent_postoffice">邮局</string>
    <string name="translate_parent_car">租车</string>
    <string name="translate_parent_life">生活</string>
    <string name="translate_parent_hospital">医院</string>
    <string name="translate_parent_emergency">紧急</string>
    <string name="translate_parent_classics">短句</string>
    <!-- 二级分类 -->
    <string name="translate_child_banlidengji">办理登机</string>
    <string name="translate_child_xinglituoyun">行李托运</string>
    <string name="translate_child_zhuanji">转机</string>
    <string name="translate_child_quxingli">取行李</string>
    <string name="translate_child_duihuanwaibi">兑换外币</string>
    <string name="translate_child_gongjiaoche">公交车</string>
    <string name="translate_child_chuzuche">出租车</string>
    <string name="translate_child_ditie">地铁</string>
    <string name="translate_child_huoche">火车</string>
    <string name="translate_child_lunchuan">轮船</string>
    <string name="translate_child_zijiache">自驾车</string>
    <string name="translate_child_dengjiruzhu">登记入住</string>
    <string name="translate_child_kefangfuwu">客房服务</string>
    <string name="translate_child_tousu">投诉</string>
    <string name="translate_child_tuifang">退房</string>
    <string name="translate_child_souluomeishi">搜罗美食</string>
    <string name="translate_child_diancai">点菜</string>
    <string name="translate_child_fuwu">服务</string>
    <string name="translate_child_maidan">买单</string>
    <string name="translate_child_meishuguan">美术馆</string>
    <string name="translate_child_bowuguan">博物馆</string>
    <string name="translate_child_tiaoxuan">挑选</string>
    <string name="translate_child_jiage">价格</string>
    <string name="translate_child_tuihuan">退换</string>
    <string name="translate_child_fukuan">付款</string>
    <string name="translate_child_jiaoji">交际</string>
    <string name="translate_child_dadianhua">打电话</string>
    <string name="translate_child_xunzhaoxishoujian">寻找洗手间</string>
    <string name="translate_child_guahao">挂号</string>
    <string name="translate_child_kanzhen">看诊</string>
    <string name="translate_child_jiaofei">缴费</string>
    <!-- mark -->
    <string name="translate_childm_banlidengji">banlidengji</string>
    <string name="translate_childm_xinglituoyun">xinglituoyun</string>
    <string name="translate_childm_zhuanji">zhuanji</string>
    <string name="translate_childm_quxingli">quxingli</string>
    <string name="translate_childm_duihuanwaibi">duihuanwaibi</string>
    <string name="translate_childm_gongjiaoche">gongjiaoche</string>
    <string name="translate_childm_chuzuche">chuzuche</string>
    <string name="translate_childm_ditie">ditie</string>
    <string name="translate_childm_huoche">huoche</string>
    <string name="translate_childm_lunchuan">lunchuan</string>
    <string name="translate_childm_zijiache">zijiache</string>
    <string name="translate_childm_dengjiruzhu">dengjiruzhu</string>
    <string name="translate_childm_kefangfuwu">kefangfuwu</string>
    <string name="translate_childm_tousu">tousu</string>
    <string name="translate_childm_tuifang">tuifang</string>
    <string name="translate_childm_souluomeishi">souluomeishi</string>
    <string name="translate_childm_diancai">diancai</string>
    <string name="translate_childm_fuwu">fuwu</string>
    <string name="translate_childm_maidan">maidan</string>
    <string name="translate_childm_meishuguan">meishuguan</string>
    <string name="translate_childm_bowuguan">bowuguan</string>
    <string name="translate_childm_tiaoxuan">tiaoxuan</string>
    <string name="translate_childm_jiage">jiage</string>
    <string name="translate_childm_tuihuan">tuihuan</string>
    <string name="translate_childm_fukuan">fukuan</string>
    <string name="translate_childm_jiaoji">jiaoji</string>
    <string name="translate_childm_dadianhua">dadianhua</string>
    <string name="translate_childm_xunzhaoxishoujian">xunzhaoxishoujian</string>
    <string name="translate_childm_guahao">guahao</string>
    <string name="translate_childm_kanzhen">kanzhen</string>
    <string name="translate_childm_jiaofei">jiaofei</string>


    <string name="txt1">Web Adresi: <a href = 'http://turkish.cri.cn'>http://turkish.cri.cn</a> \n <a href = 'http://criturk.com/'>http://criturk.com/</a>\n<a href ='http://turkish.china.com/'>http://turkish.china.com/</a></string>
    <string name="txt2">Facebook: <a href = "https://www.facebook.com/criturkce">https://www.facebook.com/criturkce</a></string>
    <string name="txt3">Twitter: <a href = "https://mobile.twitter.com/CRI_Turkish ">https://mobile.twitter.com/CRI_Turkish </a></string>
    <string name="txt4">Youtube: <a href = "https://www.youtube.com/chinatvturkish ">https://www.youtube.com/chinatvturkish </a></string>
    <string name="txt5">Instagram: <a href = "https://www.instagram.com/criturkfm/ ">https://www.instagram.com/criturkfm/ </a></string>
    <string name="about1">"\u3000\u3000"中华浏览器由中央广播电视总台出品，由国广互联科技（北京）有限公司开发的中国和土耳其之间的官方，权威，双语移动浏览器客户端。客户端集资讯，电台，视频为一身，支持搜索、收藏、分享等功能。是一款界面友好，功能完善，兼容性良好的浏览器产品。</string>
    <string name="about2">"\u3000\u3000"Çin Medya Grubu tarafından üretilen, Chinaplus Technologies (Beijing) Şirketi tarafından geliştirilen China Browser, Çin ve Türkiye arasındaki resmî, yetkili ve çift dilli mobil tarayıcı uygulamasıdır. Haber, radyo ve video unsurlarını bir araya getiren China Browser, arama, saklama ve paylaşma gibi birçok işlevi desteklemektedir. Uygulama, şık tasarıma, kusursuz işleyişe ve yüksek uyumluluğa sahip bir tarayıcıdır.</string>
</resources>

