<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/logo_conner"/>
            <TextView
                android:id="@+id/name"
                android:textColor="@color/color_txt_deep_black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/china"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_txt_black"
                android:text="@string/about1"
                android:lineSpacingExtra="8dp"/>
            <TextView
                android:id="@+id/tuerqi"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about2"/>
            <TextView
                android:id="@+id/txt1"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="İletişim Bilgileri: Shijingshan Cad. 16A Beijing China"/>
            <TextView
                android:autoLink="web"
                android:id="@+id/txt2"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt1"/>
            <TextView
                android:autoLink="web"
                android:id="@+id/txt3"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt2"/>
            <TextView
                android:autoLink="web"
                android:id="@+id/txt4"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt3"/>
            <TextView
                android:autoLink="web"
                android:id="@+id/txt5"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt4"/>
            <TextView
                android:autoLink="web"
                android:id="@+id/txt6"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_txt_black"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt5"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>