<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <include layout="@layout/layout_title" />
        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <ImageView
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@mipmap/logo_conner"/>
                <LinearLayout
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textColor="@color/color_txt_gray"
                        android:textSize="13sp"
                        android:hint="@string/str_user_name"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:id="@+id/user_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_line_gray"/>
                    <EditText
                    android:inputType="textPassword"
                    android:textColor="@color/color_txt_gray"
                    android:textSize="13sp"
                    android:hint="@string/str_user_password"
                    android:paddingTop="26dp"
                    android:paddingBottom="26dp"
                    android:id="@+id/user_psw_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_line_gray"/>
                    <EditText
                        android:inputType="textPassword"
                        android:textColor="@color/color_txt_gray"
                        android:textSize="13sp"
                        android:hint="@string/str_pswcon"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:id="@+id/user_pswconfire_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_line_gray"/>
                </LinearLayout>
               <LinearLayout
                   android:layout_marginTop="12dp"
                   android:layout_gravity="center_horizontal"
                   android:orientation="horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <TextView
                   android:id="@+id/user_agreen"
                   android:lines="1"
                   android:textColor="@color/color_txt_black"
                   android:textSize="11sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/str_regist_one"/>

                   <TextView
                       android:visibility="gone"
                       android:lines="1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str_regist_two"
                       android:textColor="#31a0ff"
                       android:textSize="11sp" />

                   <TextView
                       android:visibility="gone"
                       android:lines="1"
                       android:textColor="@color/color_txt_black"
                       android:textSize="11sp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str_regist_three"/>
               </LinearLayout>
                <Button
                    android:id="@+id/logion"
                    android:layout_gravity="center"
                    android:background="@drawable/login_button"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    android:layout_width="280dp"
                    android:layout_height="39dp"
                    android:text="@string/str_register"/>
               <LinearLayout
                   android:gravity="center_vertical"
                   android:layout_marginTop="40dp"
                   android:layout_gravity="center_horizontal"
                   android:orientation="horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <TextView
                       android:textColor="@color/color_txt_black"
                       android:textSize="11sp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str_haveaccount"/>
                   <TextView
                       android:id="@+id/comeback"
                       android:textColor="#31a0ff"
                       android:textSize="11sp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str_comeback"/>
                   <ImageView
                       android:layout_marginLeft="5dp"
                       android:layout_width="10dp"
                       android:layout_height="10dp"
                       android:src="@mipmap/forget_psw"/>
               </LinearLayout>

            </LinearLayout>
        </ScrollView> 
    </LinearLayout>
    
</RelativeLayout>