<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_s"
    android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:paddingTop="130dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_tip" />
        <TextView
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_tip2"/>

        <View
            android:visibility="invisible"
            android:id="@+id/china_line"
            android:layout_marginTop="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/chines_lag"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_china"/>
        <View
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/turkish_lag"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_turkish"/>

        <View
            android:id="@+id/turkish_line"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white"/>





    </LinearLayout>

</RelativeLayout>