<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:id="@+id/search1"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/search1"/>
        <ImageView
            android:id="@+id/selected1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/selectatten"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/search2"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/search2"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/selected2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/selectatten"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/search3"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/search3"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/selected3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/selectatten"/>
    </LinearLayout>


</LinearLayout>